--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ img{
 }
 
 .container{
-    width: 1158px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -46,8 +46,6 @@ img{
 
 /* Header */
 .header{
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
     border-bottom: 1px solid #e7e9fc;
     box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);;
 }
@@ -193,12 +191,15 @@ img{
 
 .hero-title{
 color: var(--color-footer-logo);
-font-size: 56px;
-line-height: 1.07;
+font-family: 'Roboto', sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
 text-align: center;
 letter-spacing: 0.02em;
-margin-bottom: 48px;
-max-width: 496px;
+text-transform: capitalize;
+margin-bottom: 72px;
+max-width: 320px;
 }
 
 .hero-btn{
@@ -232,9 +233,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* preferences */
 .preferences {
     font-family: inherit;
-    padding: 120px 0;
-    
-   
+    padding: 96px 16px;
+    justify-content: center;
+    align-items: center;
 }
 
 .visually-hidden {
@@ -261,13 +262,18 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .preferences-list{
-    display: flex;
-    gap: 24px;
+   
+    gap: 72px;
     
 }
 
 .preferences-item{
-    width: calc((100% - 72px) / 4); 
+    /* width: calc((100% - 72px) / 4);  */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 72px;
 }
 
 
@@ -280,7 +286,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .preferences-icon-box{
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     background-color: #F4F4FD;
@@ -296,6 +302,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* projects */
 .projects-intro{
     padding-bottom: 120px; 
+    display: none;
 }
 
 .projects-intro-title{
@@ -324,7 +331,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .team {
     background-color: var(--color-footer-text);
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 .team-item{
