--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 72px;
+    /* margin-bottom: 72px; */
 }
 
 
@@ -362,6 +362,7 @@ margin-bottom: 72px;
 
 .team-list {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 24px;
     border-radius: 0px 0px 4px 4px;
@@ -370,7 +371,6 @@ margin-bottom: 72px;
 
 .team-item {
     border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px) / 4);
 
 }
 
@@ -433,14 +433,14 @@ font-weight: 500;
 
 /* customers */
 .customers {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .customers-container {
-    width: 1158px;
+    /* width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
-    margin: 0 auto;
+    margin: 0 auto; */
    
 }
 .customers-title {
@@ -454,9 +454,18 @@ font-weight: 500;
     color: #2E2F42;
     margin-bottom: 72px;
 }
+
 .customers-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 72px 16px;
+}
+
+.customers-item{
+    width: calc((100%-16px) / 2);
+    height: 88px;
 }
 
 .customers-link{
@@ -465,6 +474,7 @@ font-weight: 500;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     color: var(--color-customers-icon);
@@ -476,13 +486,8 @@ font-weight: 500;
     color: #404bbf;
     border-color: #404bbf;
 }
-.customers-item {
-    width: calc((100% - 120px) / 6); 
-    height: 88px;
-}
+
 .customers-icon {
-    /* width: 104px;
-    height: 56px; */
     fill: currentColor;
 }
 
@@ -497,9 +502,10 @@ font-weight: 500;
 .footer-container{
     background-color: #2E2F42;
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 72px;
 }
 
 
@@ -537,6 +543,7 @@ font-weight: 500;
 .footer-soc-wrap{
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
     width: 208px;
     gap: 16px;
 }
@@ -579,10 +586,8 @@ font-weight: 500;
     fill: var(--color-nav-btn);
 }
 
-.footer-soc-wrap{
-display: flex;
-align-items: baseline;
-}
+
+
 
 .form-text{
     margin-bottom: 16px;
