--- a/css/media.css
+++ b/css/media.css
@@ -5,13 +5,76 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .main-nav-list{
+    display: none;
+  }
+
+  .address{
+    display: none;
+  }
   .preferences-item:last-child{
     margin-bottom: 0px;
 }
+
+.subscribe-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.footer-logo-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
   
-  @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1157px) {
     .container {
-      max-width: 766px;
+      min-width: 766px;
+    }
+    
+    .hamburger-btn{
+        display: none;
+    }
+    .header-container{
+        display: flex;
+        align-items: center;
+       
+        justify-content: space-between;
+        
+    }
+    .main-nav-list{
+        display: flex;
+        gap: 40px;
+      }
+    
+      .address{
+        display: flex;
+        flex-direction: column;
+      }
+
+      .address-list{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+      }
+
+      
+    .current-page::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        background: #404BBF;
+        border-radius: 2px; 
+        display: block;
+       
     }
 
     .preferences-item{
@@ -50,12 +113,60 @@
         
     }
 
+    .modal-window{
+        max-width: 408px;
+    }
+
+    /* portfolio */
+
+    .nav-btn-list{
+        justify-content: center;
+    }
+    .portfolio-cards {
+        padding-top: 64px; 
+        padding-bottom: 96px;
+    }
+
+    .portfolio-cards-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+        row-gap: 72px;
+    }
+  
+    .portfolio-cards-item{
+        width: calc((100% - 24px) / 2);
+    }
 
     .footer-container{
         min-width: 768px;
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: baseline;
         gap: 72px 24px;
+    }
+
+    .footer-link{
+        justify-content: flex-start;
+    }
+
+    .footer-soc-wrap{
+        justify-content: flex-start;
+    }
+
+    .subscribe-container{
+        align-items: flex-start;
+    }
+
+    .subscribe-label{
+        width: 264px;
+    }
+
+    .subscribe-form{
+        flex-direction: row;
+        justify-content: flex-start;
     }
   }
   
@@ -63,6 +174,32 @@
   @media screen and (min-width: 1158px) {
     .container {
       max-width: 1158px;
+    }
+
+    .hamburger-btn{
+        display: none;
+    }
+
+    .main-nav-list{
+        display: flex;
+        gap: 40px;
+      }
+    
+      .address{
+        display: flex;
+      }
+
+      .current-page::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        background: #404BBF;
+        border-radius: 2px; 
+        display: block;
+       
     }
 
     .hero-title{
@@ -101,6 +238,7 @@
 
         .team-list {
             display: flex;
+            flex-direction: row;
             align-items: center;
             gap: 24px;
             border-radius: 0px 0px 4px 4px;
@@ -128,8 +266,42 @@
            
         }
 
+        /* portfolio */
+
+        .portfolio-cards {
+            padding-top: 64px; 
+            padding-bottom: 96px;
+        }
+        .portfolio-cards-item{
+           width: calc((100% - 48px) / 3); 
+        }
+
+        .footer-link{
+            justify-content: flex-start;
+        }
+
+        .footer-soc-wrap{
+            justify-content: flex-start;
+        }
+
+        .subscribe-container{
+            width: auto;
+            align-items: flex-start;
+        }
+        .subscribe-label{
+            width: 264px;
+        }
+        
+        .subscribe-form{
+            flex-direction: row;
+        }
+
+        .subscribe-input{
+            width: 264px;
+        }
+
+        
         .footer-container{
-            background-color: #2E2F42;
             display: flex;
             align-items: baseline;
             justify-content: space-between;
