--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,8 @@ img{
 .header-container{
     display: flex;
     align-items: center;
-    gap: 40px;
+    /* gap: 40px; */
+    justify-content: space-between;
     
 }
 .nav{
@@ -129,7 +130,7 @@ img{
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    .current-page::after{
+    /* .current-page::after{
         content: '';
         position: absolute;
         left: 0;
@@ -140,13 +141,13 @@ img{
         border-radius: 2px; 
         display: block;
        
-    }
+    } */
 
     .main-nav-list{
         display: flex;
         align-items: center;
         margin-right: 40px;
-        gap: 40px;
+        /* gap: 40px; */
         
     }
 
@@ -170,8 +171,143 @@ img{
     .address-link:focus{
         color: #404bbf;
     }
+    /* mobile menu */
 
+    .hamburger-btn {
+        padding: 24px 0;
+        background-color: #ffffff;
+        border: none;
+        display: flex;
+        align-items: center;
+      }
 
+    .hamburger-icon{
+        stroke: var(--color-primary);
+    }
+
+    .modal-close.menu-close-btn {
+        background-color: transparent;
+      }
+
+    .mob-menu {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        background: #FFFFFF;
+        transform: translateY(-100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mob-menu.is-open{
+        transform: translateY(0);
+    }
+    .mob-menu-content {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding: 80px 35px 40px 40px;
+        max-width: 428px;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .modal-close-btn {
+        
+    }
+    .modal-close-icon {
+        
+    }
+    .mob-nav {
+        
+    }
+   
+    .mob-nav-list {
+        font-size: 36px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize; 
+        
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .mob-nav-item {
+        
+    }
+    .mob-nav-link{
+        color: var(--color-primary);
+    }
+    .mob-nav-link.current-page {
+        font-family: inherit;
+        color: #404BBF;
+        font-size: 36px;
+        font-family: Roboto;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+        text-decoration: none;
+    }
+    
+    
+    .mob-menu-item {
+        
+    }
+    .mob-address {
+        margin-top: auto;
+    }
+    .mob-address-list {
+        margin-bottom: 48px;
+    }
+    .mob-tel-link {
+        font-size: 36px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: var(--color-background);
+        display: inline-block;
+        margin-bottom: 40px;
+    }
+    .mob-mail-link{
+        font-size: 20px;
+        font-style: normal;
+        font-family: Roboto;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.4px;
+        color: var(--color-secondary);
+        
+        
+    }
+    .mob-soc-list {
+        display: flex;
+        justify-content: space-between;
+    }
+    .mob-soc-item {
+        width: 40px;
+         height: 40px;
+    }
+    .mob-soc-link {
+        width: 100%;
+    height: 100%;
+    background-color: var(--color-background);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .mob-soc-icon {
+    }
 
    
 /* hero */
@@ -433,16 +569,17 @@ font-weight: 500;
 
 /* customers */
 .customers {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 96px 0;
+    
 }
+
 .customers-container {
     /* width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto; */
-   
 }
+
 .customers-title {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
@@ -456,6 +593,7 @@ font-weight: 500;
 }
 
 .customers-list {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -464,8 +602,9 @@ font-weight: 500;
 }
 
 .customers-item{
-    width: calc((100%-16px) / 2);
+    max-width: 190px;
     height: 88px;
+    width: calc((100%-16px) / 2); 
 }
 
 .customers-link{
@@ -519,7 +658,8 @@ font-weight: 500;
     color: var(--color-background);
     text-decoration: none;
     margin-bottom: 16px;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     width: 264px;
 }
 
@@ -544,6 +684,7 @@ font-weight: 500;
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    justify-content: center;
     width: 208px;
     gap: 16px;
 }
@@ -597,18 +738,27 @@ font-weight: 500;
     letter-spacing: 0.02em;
 }
 
-
+.subscribe-container{
+    width: 100%;
+}
 
 .subscribe-form {
     display: flex;
+    flex-direction: column;
     gap: 24px;
-    
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .subscribe-label{
+    width: 100%;
   }
   
   .subscribe-input {
     padding: 8px 16px;
   
-    width: 264px;
+    width: 100%;
     height: 40px;
     background-color: transparent;
     border: 1px solid var(--color-footer-logo);
@@ -697,7 +847,7 @@ color: var(--color-footer-logo);
 }
 
 .portfolio-card-container{
-    padding: 32px 16px;
+    padding: 16px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -712,12 +862,13 @@ color: var(--color-footer-logo);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.container-nav{
+/* .container-nav{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .portfolio-cards {
     padding-top: 96px; 
@@ -745,11 +896,12 @@ color: var(--color-footer-logo);
 
 .nav-btn-list{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 24px;
 
-    margin-bottom: 72px;
+    margin-bottom: 48px;
 }
 
 .nav-btn{
@@ -765,8 +917,9 @@ color: var(--color-footer-logo);
 }
 .portfolio-cards-list{
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    gap: 24px;
+    /* gap: 24px; */
     row-gap: 48px;
     
 }
@@ -775,7 +928,7 @@ color: var(--color-footer-logo);
     display: flex;
     flex-wrap: wrap;
     border-radius: 0px 0px 4px 4px; 
-    width: calc((100% - 48px) / 3); 
+    /* width: calc((100% - 48px) / 3);  */
 }
 
 .portfolio-wrap{
@@ -837,7 +990,7 @@ color: var(--color-footer-logo);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px;
+    max-width: 392px;
     min-height: 584px;
     background-color:  #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
