--- a/css/styles.css
+++ b/css/styles.css
@@ -990,6 +990,8 @@ color: var(--color-footer-logo);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
+    
+    min-width: 300px;
     max-width: 392px;
     min-height: 584px;
     background-color:  #fcfcfc;
