--- a/css/media.css
+++ b/css/media.css
@@ -40,6 +40,11 @@
     .hamburger-btn{
         display: none;
     }
+
+    .mob-menu{
+        display: none;
+    }
+
     .header-container{
         display: flex;
         align-items: center;
@@ -190,6 +195,15 @@
 
     .hamburger-btn{
         display: none;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    .mob-menu{
+        display: none;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
     }
 
     .main-nav-list{
