hero, footer, portfolio
hero bcg img fixed on tablet, mob, desc
footer - max attempt on tablet!?
portfolio - add correct paddings on cards

--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,6 @@
 .container {
     max-width: 428px;
+    width: 100%;
     padding-left: 16px;
     padding-right: 16px;
     margin-left: auto;
@@ -30,6 +31,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.portfolio-card-container{
+    padding: 32px 16px;
 }
   
 @media screen and (min-width: 768px) and (max-width: 1157px) {
@@ -160,7 +165,7 @@
         min-width: 768px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        /* justify-content: space-around; */
         align-items: baseline;
         gap: 72px 24px;
     }
@@ -175,6 +180,7 @@
 
     .subscribe-container{
         align-items: flex-start;
+        width: auto;
     }
 
     .subscribe-label{
