--- a/css/media.css
+++ b/css/media.css
@@ -39,7 +39,7 @@
   
 @media screen and (min-width: 768px) and (max-width: 1157px) {
     .container {
-      min-width: 766px;
+      min-width: 768px;
     }
     
     .hamburger-btn{
@@ -63,8 +63,8 @@
       }
     
       .address{
-        display: flex;
-        flex-direction: column;
+        display: block;
+        /* flex-direction: column; */
       }
 
       .address-list{
@@ -270,6 +270,10 @@
 
         .preferences-icon-box{
             display: flex;
+        }
+
+        .preferences-text{
+            letter-spacing: 0.01em;
         }
 
         .projects-intro{
