--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-family: inherit;
     color: var(--color-secondary);
     line-height: 1.5;
-    /* letter-spacing: 0.02em; */
+    letter-spacing: 0.02em;
     
 }
 
