--- a/css/media.css
+++ b/css/media.css
@@ -105,7 +105,9 @@
         display: block; 
     }
 
-  
+    .preferences-container{
+        
+    }
 
     .preferences-list{
         display: flex;
@@ -256,7 +258,10 @@
       }
     }
 
-       
+       .preferences{
+        padding: 120px 0;
+       }
+
         .preferences-list{
             display: flex;
             gap: 24px;
@@ -317,11 +322,12 @@
         /* portfolio */
         .nav-btn-list{
             justify-content: center;
+            margin-bottom: 72px;
         }
 
         .portfolio-cards {
-            padding-top: 64px; 
-            padding-bottom: 96px;
+            padding-top: 100px; 
+            padding-bottom: 120px;
         }
 
         .portfolio-cards-list{
