--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* preferences */
 .preferences {
     font-family: inherit;
-    padding: 96px 16px;
+    padding: 96px 0;
     justify-content: center;
     align-items: center;
     
