--- a/css/media.css
+++ b/css/media.css
@@ -40,11 +40,16 @@
     margin-bottom: 0px;
 }
 
-.customers-list{
-    gap: 72px 16px;
+.customers-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+.customers-list{
+    gap: 72px 16px;
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; */
 }
 
 .subscribe-container{
