--- a/css/media.css
+++ b/css/media.css
@@ -52,6 +52,10 @@
     flex-wrap: wrap; */
 }
 
+.customers-item{
+    width: calc((100% - 16px) / 2);
+}
+
 .subscribe-container{
     display: flex;
     flex-direction: column;
@@ -197,7 +201,7 @@
     }
 
     .customers-item {
-        /* width: calc((100% - 48px) / 3);  */
+        width: calc((100% - 48px) / 3); 
         width: 168px;
     }
 
