--- a/css/media.css
+++ b/css/media.css
@@ -146,6 +146,7 @@
     }
 
     
+
     .hero-title{
         font-size: 56px;
         font-family: Roboto;
@@ -307,6 +308,10 @@
        
     }
 
+    .hero{
+        padding: 188px 0;
+    }
+
     .hero-title{
         color: var(--color-footer-logo);
         font-size: 56px;
@@ -443,3 +448,4 @@
             
         }
   }
+  
