--- a/css/styles.css
+++ b/css/styles.css
@@ -1214,7 +1214,7 @@ color: var(--color-footer-logo);
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
-    background-color: green; /* Set a background color */
+    background-color: transparent; /* Set a background color */
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
@@ -1223,9 +1223,14 @@ color: var(--color-footer-logo);
   }
   
   #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+    /* background-color: #555; Add a dark-grey background on hover */
   }
 
-  .scroll-up-btn:hover{
-        fill: #ffffff;
+  .scroll-up-btn{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), ;
+  }
+  .scroll-up-btn:hover,
+  .scroll-up-btn:active{
+        fill: aquamarine;
+        
   }
