--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@
     --color-btn-border-portfolio: #e7e9fc;
     --color-customers-icon: #8e8f99;
 }
+*{
+    scroll-behavior: smooth;
+}
 
 body{
 font-family: 'Roboto', sans-serif;
@@ -1220,6 +1223,8 @@ color: var(--color-footer-logo);
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
     font-size: 18px; /* Increase font size */
+    transition: all 0.5s ease 0s ;
+    /* scroll-behavior: smooth; */
   }
   
   #myBtn:hover {
@@ -1227,10 +1232,15 @@ color: var(--color-footer-logo);
   }
 
   .scroll-up-btn{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), ;
+    width: 50px;
+    height: 50px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   }
+
   .scroll-up-btn:hover,
   .scroll-up-btn:active{
         fill: aquamarine;
         
   }
+
+  
