--- a/css/styles.css
+++ b/css/styles.css
@@ -1208,40 +1208,19 @@ color: var(--color-footer-logo);
     color: var(--color-background);
 }
 
-/* 
-#myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: transparent; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-    transition: all 0.5s ease 0s ;
-    /* scroll-behavior: smooth; */
-  } */
-  
-  #myBtn:hover {
-    /* background-color: #555; Add a dark-grey background on hover */
-  }
 
-  /* .scroll-up-btn{
+
+  .scroll-up-btn{
     width: 50px;
     height: 50px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-  } */
+  } 
 
-  /* .scroll-up-btn:hover,
+  .scroll-up-btn:hover,
   .scroll-up-btn:active{
         fill: aquamarine;
         
-  } */
+  }
 
   .btn-up {
     position: fixed;
@@ -1250,27 +1229,27 @@ color: var(--color-footer-logo);
     z-index: 99;
     background-color: transparent;
     border: none;
-    /* fill: var(--icons-green-color); */
+    fill: var(--icons-green-color);
     transition: var(--transition-dur-and-func);
     
     display: block;
   }
 
-  /* .btn-up:active,
+   .btn-up:active,
   .btn-up:hover{
     fill: var(--accent-orange-color);
-  } */
+  }
   
   .btn-hidden {
     display: none;
   }
 
   .scroll-up-btn{
-    fill: green;
+    fill: red;
     
   }
 
   .scroll-up-btn:active,
   .scroll-up-btn:hover{
-    fill: red;
+    fill: green;
   }
